adding product form

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -16,6 +16,7 @@
     </select>
   </div>
   <div class="col-lg-6">
+    <textarea class="col-lg-12" [(ngModel)]="newProduct.description" placeholder="Your description here ..."></textarea>
     <span class="btn btn-outline-secondary" click="addAttachment()">Add file</span>
   </div>
 </div><br/>
