--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -8,7 +8,7 @@
     <label class="col-lg-3" for="newProductQT">Quantity</label>
     <input class="col-lg-9" id="newProductQT" type="text" [(ngModel)]="newProduct.quantity">
     <label class="col-lg-3" for="newProductUM">Unif of measure</label>
-    <select class="col-lg-9" style="height:32px" [(ngModel)]="newProduct.unitOfMeasure">
+    <select class="col-lg-9" id="newProductUM" style="height:32px" [(ngModel)]="newProduct.unitOfMeasure">
       <option value="1">Day</option>
       <option value="2">Hour</option>
       <option value="3">Kg</option>
