unit of measure add

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -9,10 +9,7 @@
     <input class="col-lg-9" id="newProductQT" type="text" [(ngModel)]="newProduct.quantity">
     <label class="col-lg-3" for="newProductUM">Unif of measure</label>
     <select class="col-lg-9" id="newProductUM" style="height:32px" [(ngModel)]="newProduct.unitOfMeasure">
-      <option value="1">Day</option>
-      <option value="2">Hour</option>
-      <option value="3">Kg</option>
-      <option value="4">Liter</option>
+      <option *ngFor="let u of uom" [ngValue]="u">{{u.name}}</option>
     </select>
   </div>
   <div class="col-lg-6">
