--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,4 +1,8 @@
 <app-title-page [menu]="menu"></app-title-page>
+
+<div class="row">
+    <div class="col-lg-6">
+    <h3 class="col-lg-12">Invoice</h3>
     <div class="col-lg-12" *ngIf="settings">
       <label for="currentInvoiceNumber">{{'page.settings.currentInvoiceNumber'| translate}}</label>
       <input class="form-control"  id="currentInvoiceNumber" type="number" [(ngModel)]="settings.currentInvoiceNumber">
@@ -14,3 +18,29 @@
     <div class="col-lg-12">
       <button type="button" class="btn btn-outline-dark" (click)="save()">{{'common.action.save'|translate}}</button>
     </div>
+    </div>
+    <div class="col-lg-6">
+    <h3 class="col-lg-12">Products</h3>
+      
+      <div class="col-lg-12" *ngIf="settings">
+          <label>Unit of measure</label>
+          <select class="col-lg-12" id="newProductUM" style="height:32px" [(ngModel)]="newUom">
+            <option *ngFor="let u of uom" [ngValue]="u">{{u.name}}</option>
+          </select>
+      </div>
+      <div class="col-lg-12" *ngIf="settings">
+        <label for="uomName">Name</label>
+        <input  class="form-control" id="uomName" [(ngModel)]="newUom.name">
+      </div>
+      <div class="col-lg-12" *ngIf="settings">
+        <label for="uomSymbol">Symbol</label>
+        <input  class="form-control" id="uomSymbol" [(ngModel)]="newUom.symbol">
+      </div>
+      <div class="col-lg-12">
+        <button type="button" class="btn btn-outline-dark" (click)=saveNewUom()>{{'common.action.save'|translate}}</button>
+        <button type="button" class="btn btn-outline-dark" (click)=resetNewUom()>{{'common.action.reset'|translate}}</button>
+      
+      </div>
+
+    </div>
+  </div>
