--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -181,14 +181,13 @@
               <div class="col-lg-3">{{'common.name'|translate}}</div>
               <div class="col-lg-3">{{'page.items.priceUnit'|translate}}</div>
               <div class="col-lg-2">{{'page.items.qty'| translate}}</div>
-              <div class="col-lg-3">{{'page.items.unitOfMeasure'| translate}}</div>
             </div>
             <div class="col-lg-12 row selected-product-content" *ngFor="let p of current.products;let i = index">
               <div class="col-lg-1"><span click="remove">-</span></div>
               <div class="col-lg-3"><input [(ngModel)]="p.name"></div>
               <div class="col-lg-3"><input [(ngModel)]="p.unitPrice"></div>
               <div class="col-lg-2"><input [(ngModel)]="p.quantity"></div>
-              <div class="col-lg-3"><input [(ngModel)]="p.unitOfMeasure"></div>
+              <div class="col-lg-1" *ngIf="p.unitOfMeasure"><label>{{p.unitOfMeasure.symbol}}</label></div>
 
               <!--<button (click)="removeProduct(i)">-</button>-->
             </div>
