--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,5 +1,5 @@
 <app-title-page [menu]="menu" *ngIf="!selectOnly"></app-title-page>
-<div class="col-lg-12 row">
+<div class="col-lg-12 row" *ngIf="!selectOnly">
   <div class="col-lg-6 row">
     <label class="col-lg-3" for="newProductName">Name</label>
     <input class="col-lg-9" id="newProductName" type="text" [(ngModel)]="newProduct.name">
