--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-lg-6">
-    <h3 class="col-lg-12">Invoice</h3>
+    <h3 class="col-lg-12">{{'menu.invoice'|translate}}</h3>
     <div class="col-lg-12" *ngIf="settings">
       <label for="currentInvoiceNumber">{{'page.settings.currentInvoiceNumber'| translate}}</label>
       <input class="form-control"  id="currentInvoiceNumber" type="number" [(ngModel)]="settings.currentInvoiceNumber">
@@ -20,7 +20,7 @@
     </div>
     </div>
     <div class="col-lg-6">
-    <h3 class="col-lg-12">Products</h3>
+    <h3 class="col-lg-12">{{'menu.product'|translate}}</h3>
       
       <div class="col-lg-12" *ngIf="settings">
           <label>Unit of measure</label>
