--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -22,12 +22,7 @@
     <div class="col-lg-6">
     <h3 class="col-lg-12">{{'menu.product'|translate}}</h3>
       
-      <div class="col-lg-12" *ngIf="settings">
-          <label>Unit of measure</label>
-          <select class="col-lg-12" id="newProductUM" style="height:32px" [(ngModel)]="newUom">
-            <option *ngFor="let u of uom" [ngValue]="u">{{u.name}}</option>
-          </select>
-      </div>
+      
       <div class="col-lg-12" *ngIf="settings">
         <label for="uomName">Name</label>
         <input  class="form-control" id="uomName" [(ngModel)]="newUom.name">
@@ -40,6 +35,16 @@
         <button type="button" class="btn btn-outline-dark" (click)=saveNewUom()>{{'common.action.save'|translate}}</button>
         <button type="button" class="btn btn-outline-dark" (click)=resetNewUom()>{{'common.action.reset'|translate}}</button>
       
+      </div>
+      <div class="col-lg-12" *ngIf="settings">
+          <label>Unit of measure</label>
+          <app-data-table
+            [dataSource]="uomRestService"
+            [dataColumns]="[
+            {field: {name: 'name'}, label: 'Name'},
+            {field: {name: 'symbol'}, label: ''}
+            ]"
+          ></app-data-table>
       </div>
 
     </div>
