click event uom

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -43,6 +43,7 @@
             {field: {name: 'name'}, label: 'Name'},
             {field: {name: 'symbol'}, label: ''}
             ]"
+            (clickEvent)="newUom = $event"
           ></app-data-table>
       </div>
 
