--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -19,10 +19,10 @@
       <button type="button" class="btn btn-outline-dark" (click)="save()">{{'common.action.save'|translate}}</button>
     </div>
     </div>
-    <div class="col-lg-6">
+    <div class="col-lg-6 row">
     <h3 class="col-lg-12">{{'page.items.unitOfMeasure'|translate}}</h3>
       
-      
+      <div class="col-lg-6">
       <div class="col-lg-12" *ngIf="settings">
         <label for="uomName">Name</label>
         <input  class="form-control" id="uomName" [(ngModel)]="newUom.name">
@@ -31,12 +31,13 @@
         <label for="uomSymbol">Symbol</label>
         <input  class="form-control" id="uomSymbol" [(ngModel)]="newUom.symbol">
       </div>
-      <div class="col-lg-12">
-        <button type="button" class="btn btn-outline-dark" (click)=saveNewUom()>{{'common.action.save'|translate}}</button>
-        <button type="button" class="btn btn-outline-dark" (click)=resetNewUom()>{{'common.action.reset'|translate}}</button>
       
+      <div class="col-lg-12">
+          <button type="button" class="btn btn-outline-dark" (click)=saveNewUom()>{{'common.action.save'|translate}}</button>
+          <button type="button" class="btn btn-outline-dark" (click)=resetNewUom()>{{'common.action.reset'|translate}}</button>
+        </div>
       </div>
-      <div class="col-lg-12" *ngIf="settings">
+      <div class="col-lg-6" *ngIf="settings">
           <app-data-table
             [dataSource]="uomRestService"
             [dataColumns]="[
