sorting columns : cursor pointer on column

--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -1,7 +1,8 @@
 <div class="mainGrid  mt-3">
   <div class="gridCol gridHeaders">
       <ng-container *ngFor="let row of dataColumns">
-        <div *ngIf="!row.hide" class="gridRow" title="{{row.label | translate}}" (click)="
+        <div *ngIf="!row.hide" class="gridRow" title="{{row.label | translate}}" style="cursor:pointer"
+        (click)="
         orderBy(row) == columnOrder.name
         ?columnOrder = {name: orderBy(row),asc: !columnOrder.asc}
         :columnOrder = {name: orderBy(row),asc: false}">
