--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -187,9 +187,14 @@
               <div class="col-lg-3"><input [(ngModel)]="p.name"></div>
               <div class="col-lg-3"><input [(ngModel)]="p.unitPrice"></div>
               <div class="col-lg-2"><input [(ngModel)]="p.quantity"></div>
-              <div class="col-lg-1" *ngIf="p.unitOfMeasure"><label>{{p.unitOfMeasure.symbol}}</label></div>
 
               <!--<button (click)="removeProduct(i)">-</button>-->
+            </div>
+            
+            <div class="col-lg-12 row selected-product-content">
+                <div class="col-lg-6"></div>
+                <div class="col-lg-1"><label><b>Total</b></label></div>
+                <div class="col-lg-2"><b>{{totalPriceProduct}}</b></div>
             </div>
           </div>
           <div class="col-lg-5">
