invoice -> product -> total amount

--- a/src/app/invoice/invoice.component.css
+++ b/src/app/invoice/invoice.component.css
@@ -152,7 +152,7 @@ i{
 }
 .selected-product-content > div > input {
     border: none;
-    border-bottom: solid 1px #EDEDED;
+    border-bottom: dotted 1px #b7b7b7;/*solid 1px #EDEDED;*/
     border-radius: 0;
     outline: none;
     width: 95%;
