--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -179,14 +179,17 @@
             <div class="col-lg-12 row selected-product-header">
               <div class="col-lg-1"></div>
               <div class="col-lg-3">{{'common.name'|translate}}</div>
-              <div class="col-lg-3">{{'page.items.priceUnit'|translate}}</div>
-              <div class="col-lg-2">{{'page.items.qty'| translate}}</div>
+              <div class="col-lg-3">{{'page.items.qty'| translate}}</div>
+              <div class="col-lg-2">{{'page.items.priceUnit'|translate}}</div>
             </div>
             <div class="col-lg-12 row selected-product-content" *ngFor="let p of current.products;let i = index">
-              <div class="col-lg-1"><span click="remove">-</span></div>
-              <div class="col-lg-3"><input [(ngModel)]="p.name"></div>
-              <div class="col-lg-3"><input [(ngModel)]="p.unitPrice"></div>
-              <div class="col-lg-2"><input [(ngModel)]="p.quantity"></div>
+              <div class="col-lg-1" style="
+              padding-top: 5px;
+              text-align: right;
+              padding-right: 10px;"><fa-icon [icon]="faCannabis" style="color:#27ad05"></fa-icon></div>
+              <div class="col-lg-3"><input [(ngModel)]="p.name" style="width: 80%"></div>
+              <div class="col-lg-3"><input [(ngModel)]="p.quantity" style="width: 80%"><small>{{p.unitOfMeasure.symbol}}</small></div>
+              <div class="col-lg-2"><input [(ngModel)]="p.unitPrice" style="width: 80%"><small>€</small></div>
 
               <!--<button (click)="removeProduct(i)">-</button>-->
             </div>
