--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -186,7 +186,7 @@
               <div class="col-lg-1" style="
               padding-top: 5px;
               text-align: right;
-              padding-right: 10px;"><fa-icon [icon]="faCannabis" style="color:#27ad05"></fa-icon></div>
+              padding-right: 10px;"><fa-icon [icon]="faCannabis" style="color:#27ad05;cursor: pointer;" (click)="removeProduct(i)"></fa-icon></div>
               <div class="col-lg-3"><input [(ngModel)]="p.name" style="width: 80%"></div>
               <div class="col-lg-3"><input [(ngModel)]="p.quantity" style="width: 80%"><small>{{p.unitOfMeasure.symbol}}</small></div>
               <div class="col-lg-2"><input [(ngModel)]="p.unitPrice" style="width: 80%"><small>€</small></div>
@@ -197,7 +197,7 @@
             <div class="col-lg-12 row selected-product-content">
                 <div class="col-lg-6"></div>
                 <div class="col-lg-1"><label><b>Total</b></label></div>
-                <div class="col-lg-2"><b>{{totalPriceProduct}}</b></div>
+                <div class="col-lg-2"><b style="width: 80%">{{totalPriceProduct}}</b></div>
             </div>
           </div>
           <div class="col-lg-5">
