--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -173,9 +173,9 @@
         <app-item-list [invoice]="current" *ngIf="current && listOpened == 'items'"></app-item-list>
 
         <div class="col-lg-12 row" *ngIf="current && listOpened == 'products'">
-          <div class="col-lg-7">
-            <h5>{{'menu.product' | translate}}</h5>
-            <span class="btn btn-outline-dark" (click)="current.products = []">{{'common.action.clearselection'|translate}}</span>
+          <div class="col-lg-5">
+            <h5><span class="btn btn-outline-dark" (click)="current.products = []">{{'common.action.clearselection'|translate}}</span>
+               {{'menu.product' | translate}}</h5>
             <div class="col-lg-12 row selected-product-header">
               <div class="col-lg-1"></div>
               <div class="col-lg-3">{{'common.name'|translate}}</div>
@@ -200,7 +200,7 @@
                 <div class="col-lg-2"><b style="width: 80%">{{totalPriceProduct}}</b></div>
             </div>
           </div>
-          <div class="col-lg-5">
+          <div class="col-lg-7">
             <app-product (productSelected)="productSelected($event)" [selectOnly]="true"></app-product>
           </div>
         </div>
