--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,6 +1,6 @@
 <app-title-page [menu]="menu" *ngIf="!selectOnly"></app-title-page>
-<div class="col-lg-12 row" *ngIf="!selectOnly">
-  <div class="col-lg-6 row">
+<div class="col-lg-12 row form-group" *ngIf="!selectOnly">
+ 
     <label class="col-lg-3" for="newProductName">Name</label>
     <input class="col-lg-9 form-control form-control-sm" id="newProductName" type="text" [(ngModel)]="newProduct.name">
     <label class="col-lg-3" for="newProductUP">Unit price</label>
@@ -11,11 +11,10 @@
     <select class="col-lg-9 form-control form-control-sm" id="newProductUM" style="height:32px" [(ngModel)]="newProduct.unitOfMeasure">
       <option *ngFor="let u of uom" [ngValue]="u">{{u.name}}</option>
     </select>
-  </div>
-  <div class="col-lg-6 row">
-    <textarea class="col-lg-12 md-textarea  form-control" [(ngModel)]="newProduct.description" placeholder="Your description here ..."></textarea>
-    <span class="btn btn-outline-secondary" click="addAttachment()">Add file</span>
-  </div>
+    <label class="col-lg-3" for="newProductName">Description</label>
+    <textarea class="col-lg-9 md-textarea  form-control" [(ngModel)]="newProduct.description" placeholder="Your description here ..."></textarea>
+    <span class="offset-lg-10 col-lg-2 btn btn-outline-secondary" click="addAttachment()">Add file</span>
+  
 </div><br/>
 <div class="col-lg-12">
   <div class="form-group" *ngIf="!selectOnly">
