--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -11,8 +11,8 @@
     <select class="col-lg-9 form-control form-control-sm" id="newProductUM" style="height:32px" [(ngModel)]="newProduct.unitOfMeasure">
       <option *ngFor="let u of uom" [ngValue]="u">{{u.name}}</option>
     </select>
-    <label class="col-lg-3" for="newProductName">Description</label>
-    <textarea class="col-lg-9 md-textarea  form-control" [(ngModel)]="newProduct.description" placeholder="Your description here ..."></textarea>
+    <label class="col-lg-3" for="newProductDescription">Description</label>
+    <textarea id="newProductDescription" class="col-lg-9 md-textarea  form-control" [(ngModel)]="newProduct.description" placeholder="Your description here ..."></textarea>
     <span class="offset-lg-10 col-lg-2 btn btn-outline-secondary" click="addAttachment()">Add file</span>
   
 </div><br/>
