--- a/src/app/title-page/title-page.component.html
+++ b/src/app/title-page/title-page.component.html
@@ -1,4 +1,4 @@
-<div class="col-lg-12">
+<div class="col-lg-12 m-0 p-0">
   <h5>
     <fa-icon [icon]="menu.icon" class="header-icon"
              [ngStyle]="{'border-color': menu.color, 'color': menu.color}"></fa-icon>&nbsp;{{menu.label | translate}}
