--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -1,6 +1,6 @@
 <app-title-page [menu]="menu"></app-title-page>
 <div class="main row">
-  <div class="col-lg-12">
+  <div class="col-lg-12 m-0 p-0">
     <div class="col-lg-12 row p-0 m-0">
       <div *ngIf="!current " class="col-lg-12">
         <button class="btn btn-outline-secondary" (click)="openModal(invoiceContent)">
