--- a/src/app/invoiceprofile/invoiceprofile.component.html
+++ b/src/app/invoiceprofile/invoiceprofile.component.html
@@ -1,6 +1,6 @@
 <app-title-page [menu]="menu"></app-title-page>
-<div class="col-lg-12 row">
-  <div class="col-lg-12">
+<div class="col-lg-12  m-0 p-0 row">
+  <div class="col-lg-12 m-0 p-0">
     <button class="btn btn-outline-secondary" (click)="openModal(content)">
       <fa-icon [icon]="faPlus"></fa-icon>
       {{'common.action.add' | translate}}
