--- a/src/app/pagination/pagination.component.html
+++ b/src/app/pagination/pagination.component.html
@@ -1,4 +1,26 @@
-<div class="col-lg-12 row pagination">
+<select [(ngModel)]="pageSize" (change)="pageNumber=0;get()" style="float:right;max-width: 50px;font-size: 10px" class="form-control form-control-sm select">
+  <option>1</option>
+  <option>5</option>
+  <option>10</option>
+  <option>25</option>
+  <option>50</option>
+  <option>100</option>
+</select>
+<ngb-pagination 
+[collectionSize]="totalElements" 
+[(page)]="pageNumber" 
+[pageSize]="pageSize" 
+[maxSize]="10" 
+[rotate]="true" 
+[boundaryLinks]="true" 
+(pageChange)="get()" 
+size="sm"
+class="d-flex justify-content-end"></ngb-pagination>
+
+
+<!-- OLD BELOW MAYBE TO DELETE -->
+<div class="col-lg-12 row pagination" *ngIf="0">
+    
   <div class="col-lg-11">
     <label>Pages:
       <a *ngIf="pageNumber !==0" (click)="pageNumber=0;get()"><fa-icon [icon]="faFastBackward"></fa-icon>&nbsp;</a>
