--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -45,7 +45,7 @@
   </div>
 </div>
 <div class="col-12 row p-0 m-0">
-  <div ngbDropdown class="d-inline-block col-3 m-0 p-0">
+  <div ngbDropdown placement="top-left" class="d-inline-block col-3 m-0 p-0">
     <span id="dropdown" ngbDropdownToggle class="hidebtn lead text-uppercase" style="float: left;">
       <fa-icon [icon]="faFlag"></fa-icon>
       <span class="d-none d-md-inline">&nbsp;{{'datatable.options' | translate }}</span>
