--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -26,10 +26,10 @@
 
         <!-- NEW VERSION -->
 
-        <div class="container-new-version col-lg-12 row">
-          <div class="col-lg-8 col-sm-12 mt-lg-2" *ngIf="!current && newVersion">
+        <div class="container-new-version col-lg-12 row  p-0 m-0">
+          <div class="col-lg-8 col-sm-12 mt-lg-2 p-0 m-0" *ngIf="!current && newVersion">
             <div *ngFor="let i of history"
-                 class="col-lg-12 col-sm-12 new-table-invoice {{i.status==0?'invoice-open':'invoice-close'}} {{idDetailsSelected==i.id?'selected':''}} row"
+                 class="p-0 m-0 col-lg-12 col-sm-12 new-table-invoice {{i.status==0?'invoice-open':'invoice-close'}} {{idDetailsSelected==i.id?'selected':''}} row"
                  (click)="openDetails(i)" style="cursor: pointer;">
               <div class="col-sm-12 col-lg-1 status">&nbsp;</div>
               <div class="col-lg-2" *ngIf="i.invoicer.logo" style="overflow: hidden">
@@ -101,7 +101,7 @@
             </div>
             <app-pagination [dataSource]="invoiceService" (newData)="refreshGrid($event)"></app-pagination>
           </div>
-          <div class="col-lg-4 col-sm-12 details-container mt-sm-2" *ngIf="details && newVersion">
+          <div class="d-none d-md-block col-lg-4 col-sm-12 details-container mt-sm-2" *ngIf="details && newVersion">
             <div class="col-lg-12" *ngIf="details.items.length == 0"><h5>No items</h5></div>
             <div class="col-lg-12 row details-row" *ngFor="let d of details.items">
 
