--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -35,8 +35,8 @@
               <div class="col-lg-2" *ngIf="i.invoicer.logo" style="overflow: hidden">
                 <app-image-loader [height]="75" [image]="i.invoicer.logo"></app-image-loader>
               </div>
-              <div class="col-lg-9 row">
-                <div class="col-lg-7">
+              <div class="col-lg-12 p-0 m-0 row">
+                <div class="col-lg-7 col-6">
                   <div class="col-lg-12 title">{{i.title}}</div>
                   <div class="col-lg-12 number">{{i.invoiceNumber}}</div>
                   <div class="col-lg-12 row">
@@ -50,7 +50,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-6">
                   <div class="number">
                     <div ngbDropdown class="d-inline-block" style="cursor: pointer;">
                       <span ngbDropdownToggle><fa-icon [icon]="faPaperclip"></fa-icon> {{i.attachments.length}}</span>
