data table save preferences

--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -13,6 +13,7 @@
 
 
         <app-data-table *ngIf="!newVersion"
+                        [id]="'invoice-list'"
                         [dataSource]="invoiceService"
                         [dataColumns]="dataColumns"
                         [customActions]="customActions"
