--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -69,13 +69,12 @@
   </div>
 </div>
 
-
 <ng-template #columnHide let-modal>
   <h4 class="modal-title" id="modal-basic-title" style="text-align:center">{{'datatable.hide' | translate }}</h4>
   <div class="col-lg-12 row">
     <ng-container *ngFor="let dc of dataColumns">
       <div class="col-lg-10"><label for="{{dc.label}}">{{dc.label | translate}}</label></div>
-      <div class="col-lg-2"><input id="{{dc.label}}" type="checkbox" [(ngModel)]="dc.hide"></div>
+      <div class="col-lg-2"><input id="{{dc.label}}" type="checkbox" [(ngModel)]="dc.hide" (change)="saveLocalSettings()"></div>
     </ng-container>
   </div>
   </ng-template>
