--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,21 +1,40 @@
 <app-title-page [menu]="menu" *ngIf="!selectOnly"></app-title-page>
-<div class="col-lg-12 form-group row m-0 p-0" *ngIf="!selectOnly">
- 
-    <label class="col-lg-3" for="newProductName">Name</label>
-    <input class="col-lg-9 form-control form-control-sm" id="newProductName" type="text" [(ngModel)]="newProduct.name">
-    <label class="col-lg-3" for="newProductUP">Unit price</label>
-    <input class="col-lg-9 form-control form-control-sm" id="newProductUP" type="text" [(ngModel)]="newProduct.unitPrice">
-    <label class="col-lg-3" for="newProductQT">Quantity</label>
-    <input class="col-lg-9 form-control form-control-sm" id="newProductQT" type="text" [(ngModel)]="newProduct.quantity">
-    <label class="col-lg-3" for="newProductUM">Unif of measure</label>
-    <select class="col-lg-9 form-control form-control-sm" id="newProductUM" style="height:32px" [(ngModel)]="newProduct.unitOfMeasure">
-      <option *ngFor="let u of uom" [ngValue]="u">{{u.name}}</option>
-    </select>
-    <label class="col-lg-3" for="newProductDescription">Description</label>
-    <textarea id="newProductDescription" class="col-lg-9 md-textarea  form-control form-control-sm" [(ngModel)]="newProduct.description" placeholder="Your description here ..."></textarea>
-    <span class="offset-lg-10 col-lg-2 btn btn-outline-secondary" click="addAttachment()">Add file</span>
-  
-</div><br/>
+<div class="col-lg-12 row m-0 p-0">
+  <div class="col-lg-6 form-group row m-0 p-0" *ngIf="!selectOnly">
+      <label class="col-lg-3" for="newProductName">Name</label>
+      <input class="col-lg-9 form-control form-control-sm" id="newProductName" type="text" [(ngModel)]="newProduct.name">
+      <label class="col-lg-3" for="newProductUP">Unit price</label>
+      <input class="col-lg-9 form-control form-control-sm" id="newProductUP" type="text" [(ngModel)]="newProduct.unitPrice">
+      <label class="col-lg-3" for="newProductQT">Quantity</label>
+      <input class="col-lg-9 form-control form-control-sm" id="newProductQT" type="text" [(ngModel)]="newProduct.quantity">
+      <label class="col-lg-3" for="newProductUM">Unif of measure</label>
+      <select class="col-lg-9 form-control form-control-sm" id="newProductUM" style="height:32px" [(ngModel)]="newProduct.unitOfMeasure">
+        <option *ngFor="let u of uom" [ngValue]="u">{{u.name}}</option>
+      </select>
+      <label class="col-lg-3" for="newProductDescription">Description</label>
+      <textarea id="newProductDescription" class="col-lg-9 md-textarea  form-control form-control-sm" [(ngModel)]="newProduct.description" placeholder="Your description here ..."></textarea>
+      <span class="offset-lg-10 col-lg-2 btn btn-outline-secondary" onClick="document.getElementById('file').click()">Add file</span>
+      <input type="file" (change)="addAttachment($event)" id="file" style="display:none">
+  </div>
+  <div class="col-lg-6 form-group row m-0 p-0" *ngIf="newProduct.uploads">
+    {{currentImage}}
+    <span class="col-lg-1 btn btn-outline-secondary" *ngIf="currentImage > 0" (click)="currentImage = currentImage - 1">-</span>
+    <div class="col-lg-10 row">
+        <img [src]="getAttachment(newProduct.uploads[currentImage])" height="100" class="col-lg-12 image"> 
+    </div>
+    <span class="col-lg-1 btn btn-outline-secondary" *ngIf="currentImage < newProduct.uploads.length" (click)="currentImage =currentImage + 1">></span>
+    
+    <div class="col-lg-12 row">
+    <ng-container *ngFor="let u of newProduct.uploads;index as i">
+        <div class="col-lg-3">
+          <img [src]="getAttachment(u)" height="50" class="image" (click)="currentImage = i">
+        </div>
+    </ng-container>
+    </div>
+    
+  </div>
+</div>
+<br/>
 <div class="col-lg-12 m-0 p-0">
   <div class="form-group" *ngIf="!selectOnly">
     <div class="btn-group">
