--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,4 +1,5 @@
 <app-title-page [menu]="menu" *ngIf="!selectOnly"></app-title-page>
+
 <div class="col-lg-12 row m-0 p-0">
   <div class="col-lg-6 form-group row m-0 p-0" *ngIf="!selectOnly">
       <label class="col-lg-3" for="newProductName">Name</label>
@@ -16,22 +17,11 @@
       <span class="offset-lg-10 col-lg-2 btn btn-outline-secondary" onClick="document.getElementById('file').click()">Add file</span>
       <input type="file" (change)="addAttachment($event)" id="file" style="display:none">
   </div>
-  <div class="col-lg-6 form-group row m-0 p-0" *ngIf="newProduct.uploads">
-    {{currentImage}}
-    <span class="col-lg-1 btn btn-outline-secondary" *ngIf="currentImage > 0" (click)="currentImage = currentImage - 1">-</span>
-    <div class="col-lg-10 row">
-        <img [src]="getAttachment(newProduct.uploads[currentImage])" height="100" class="col-lg-12 image"> 
-    </div>
-    <span class="col-lg-1 btn btn-outline-secondary" *ngIf="currentImage < newProduct.uploads.length" (click)="currentImage =currentImage + 1">></span>
-    
-    <div class="col-lg-12 row">
+  <div class="col-lg-6 form-group" *ngIf="newProduct.uploads">
+    <img [src]="getAttachment(newProduct.uploads[currentImage])" class="main image"> 
     <ng-container *ngFor="let u of newProduct.uploads;index as i">
-        <div class="col-lg-3">
-          <img [src]="getAttachment(u)" height="50" class="image" (click)="currentImage = i">
-        </div>
+      <img [src]="getAttachment(u)" class="image" (click)="currentImage = i">
     </ng-container>
-    </div>
-    
   </div>
 </div>
 <br/>
