save product image

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -17,10 +17,14 @@
       <span class="offset-lg-10 col-lg-2 btn btn-outline-secondary" onClick="document.getElementById('file').click()">Add file</span>
       <input type="file" (change)="addAttachment($event)" id="file" style="display:none">
   </div>
-  <div class="col-lg-6 form-group" *ngIf="newProduct.uploads">
-    <img [src]="getAttachment(newProduct.uploads[currentImage])" class="main image"> 
+  <div class="col-lg-6 p-0 m-0 form-group" *ngIf="newProduct.uploads">
+    <div class="image" style="height: 200px;width: 100%;">
+    <img [src]="getAttachment(newProduct.uploads[currentImage])" class="main"> 
+    </div>
     <ng-container *ngFor="let u of newProduct.uploads;index as i">
-      <img [src]="getAttachment(u)" class="image" (click)="currentImage = i">
+      <div class="image" style="height: 50px;width: 50px;float: left;" (click)="currentImage = i">
+        <img [src]="getAttachment(u)">
+      </div>
     </ng-container>
   </div>
 </div>
