--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -20,24 +20,24 @@ textarea.form-control {
     margin-top: 5px;
     margin-bottom: 5px;
 }
-img.main.image {
-    width: 250px;
-    height: 250px;
-}
-img.image {
+div.image {
     border: 1px solid #ddd; /* Gray border */
     border-radius: 4px;  /* Rounded border */
-    padding: 5px; /* Some padding */
-    height: 50px;
-    width: 50px; /* Set a small width */
+    padding: 5px;
+    margin-left: 5px;
+    margin-bottom: 5px;
+    float: left;
+    cursor: pointer;
+}
+img {
+    
     max-width: 100%;
     max-height: 100%;
-    margin: 2px;
-    float: left;
 }
 
+
 /* Add a hover effect (blue shadow) */
-img.image:hover {
+div.image:hover {
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
 .img-next {
