--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -29,6 +29,17 @@ div.image {
     float: left;
     cursor: pointer;
 }
+@media only screen and (max-width: 991.98px) {
+    div.image {
+        margin-left: 0px;
+    }
+}
+
+@media only screen and (max-width: 991.98px) {
+    div.image.main {
+        width: 100% !important;
+    }
+}
 img {
     
     max-width: 100%;
